# beanhub-beancount-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: README.md  accounts.bean  commodities.bean  flake.nix  main.bean
{{ cookiecutter.project_slug }}/.beanhub/: forms.yaml  imports.yaml
{{ cookiecutter.project_slug }}/books/: books.bean  {{ cookiecutter.year }}.bean
{{ cookiecutter.project_slug }}/import-data/mercury/: 2024.csv
