[tool.poetry]
name = "beanhub-beancount-cookiecutter"
version = "0.2.0"
description = ""
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
